--- a/node2vec_embed.ipynb
+++ b/node2vec_embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,20 @@
     "    doidx.append(node_1)\n",
     "\n",
     "#load lnRNA ids\n",
-    "lncidx = []\n",
-    "with open(\"data/lncRNA_ids.txt\", 'r') as file:\n",
-    "    node_lncRNA = file.readlines()\n",
-    "    for id in node_lncRNA:\n",
-    "        node = id.split()[0]\n",
-    "        lncidx.append(node)\n",
+    "# lncidx = []\n",
+    "# with open(\"data/lncRNA_ids.txt\", 'r') as file:\n",
+    "#     node_lncRNA = file.readlines()\n",
+    "#     for id in node_lncRNA:\n",
+    "#         node = id.split()[0]\n",
+    "#         lncidx.append(node)\n",
     "\n",
-    "#load miRNA\n",
-    "miidx = []\n",
-    "with open('data/miRNA_ids.txt', 'r') as file:\n",
-    "    node_miRNA = file.readlines()\n",
-    "    for id in node_miRNA:\n",
-    "        node = id.split()[0]\n",
-    "        miidx.append(node)"
+    "# #load miRNA\n",
+    "# miidx = []\n",
+    "# with open('data/miRNA_ids.txt', 'r') as file:\n",
+    "#     node_miRNA = file.readlines()\n",
+    "#     for id in node_miRNA:\n",
+    "#         node = id.split()[0]\n",
+    "#         miidx.append(node)"
    ]
   },
   {
@@ -68,17 +68,17 @@
     }
    ],
    "source": [
-    "#embedding the 3 graphs: gd, gg_dd_edges, gg_dd_edges\n",
-    "graph_name = 'gg_dd_edges'\n",
+    "#embedding the 3 graphs: gd, gld, gld\n",
+    "graph_name = 'gld'\n",
     "\n",
-    "gg_dd_edges_graph = nx.read_weighted_edgelist('data/'+graph_name+'.edgelist',delimiter=\"\\t\")  \n",
-    "print(gg_dd_edges_graph)\n",
+    "gld_graph = nx.read_weighted_edgelist('data/'+graph_name+'.edgelist',delimiter=\"\\t\")  \n",
+    "print(gld_graph)\n",
     "\n",
-    "print(\"Before:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n",
-    "for edge in list(gg_dd_edges_graph.edges):\n",
-    "    if gg_dd_edges_graph.get_edge_data(edge[0],edge[1])['weight']<0.4:\n",
-    "        gg_dd_edges_graph.remove_edge(edge[0],edge[1])\n",
-    "print(\"After:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n"
+    "print(\"Before:\",gld_graph.number_of_nodes(),gld_graph.number_of_edges())\n",
+    "for edge in list(gld_graph.edges):\n",
+    "    if gld_graph.get_edge_data(edge[0],edge[1])['weight']<0.4:\n",
+    "        gld_graph.remove_edge(edge[0],edge[1])\n",
+    "print(\"After:\",gld_graph.number_of_nodes(),gld_graph.number_of_edges())\n"
    ]
   },
   {
