--- a/feature_concatenate.ipynb
+++ b/feature_concatenate.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\Desktop\\gene disease prediction\\DisGeneGraph\\DGGN\\util.py:4: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:108: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings  \n",
     "with warnings.catch_warnings():\n",
@@ -19,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,31 +49,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/X_train_gd_node2vec.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X_train_gd_node2vec \u001b[38;5;241m=\u001b[39m normalization(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/X_train_gd_node2vec.npy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m) \n\u001b[0;32m      2\u001b[0m X_train_gd_line \u001b[38;5;241m=\u001b[39m normalization(np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/X_train_gd_line.npy\u001b[39m\u001b[38;5;124m'\u001b[39m))      \n\u001b[0;32m      3\u001b[0m X_train_gd_nl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate((X_train_gd_node2vec,X_train_gd_line),axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\lib\\npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[0;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28mopen\u001b[39m(os_fspath(file), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/X_train_gd_node2vec.npy'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_data.py:259: UserWarning: Numerical issues were encountered when scaling the data and might not be solved. The standard deviation of the data is probably very close to 0. \n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((9112, 256), (2280, 256))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train_gd_node2vec = normalization(np.load('data/X_train_gd_node2vec.npy')) \n",
-    "X_train_gd_line = normalization(np.load('data/X_train_gd_line.npy'))      \n",
+    "X_train_gd_node2vec = normalization(np.load('data/node2vec and line/gd/X_train_gd_node2vec.npy')) \n",
+    "X_train_gd_line = normalization(np.load('X_train_ggdd_line.npy'))      \n",
+    "\n",
     "X_train_gd_nl = np.concatenate((X_train_gd_node2vec,X_train_gd_line),axis=1)\n",
     "\n",
-    "X_test_gd_node2vec = normalization(np.load('data/X_test_gd_node2vec.npy'))    \n",
-    "X_test_gd_line = normalization(np.load('data/X_test_gd_line.npy')) \n",
+    "X_test_gd_node2vec = normalization(np.load('data/node2vec and line/gd/X_test_gd_node2vec.npy'))    \n",
+    "X_test_gd_line = normalization(np.load('X_test_ggdd_line.npy')) \n",
     "X_test_gd_nl = np.concatenate((X_test_gd_node2vec,X_test_gd_line),axis=1)\n",
     "\n",
     "X_train_gd_nl = normalization(X_train_gd_nl) \n",
@@ -69,77 +112,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.6442317e-01 -3.7595522e-01 -9.4612509e-01 -1.5896027e+00\n",
-      "  3.5894865e-01 -1.0842941e+00 -1.5771542e+00  2.1062879e-01\n",
-      " -1.5439751e+00  5.1353025e-01 -6.0746366e-01  6.2946808e-01\n",
-      " -4.1208214e-01  2.0466136e-02  1.0816803e+00 -2.0112817e+00\n",
-      "  2.3897953e-01 -2.6881093e-01 -5.7066846e-01 -9.8785275e-01\n",
-      " -2.7105272e-01 -1.9948788e+00  4.1531956e-01  1.4904268e+00\n",
-      "  2.8850347e-01  1.1844357e+00  5.9106928e-01 -1.3220958e+00\n",
-      "  1.2177514e+00  2.0917650e-01 -5.7001615e-01 -1.5403688e-01\n",
-      "  6.1537180e-02 -3.1009603e-01 -2.2358562e-01  5.8691633e-01\n",
-      " -2.1378559e-01 -1.2934417e+00  1.5816113e-01 -1.3415934e+00\n",
-      "  6.6742110e-01  9.8966551e-01 -2.5713474e-01  6.4196956e-01\n",
-      "  8.0835891e-01 -7.6739717e-01 -1.2362399e+00  3.2944620e-01\n",
-      "  2.1086435e+00  5.3472197e-01  9.2453432e-01 -8.7625170e-01\n",
-      "  1.4436907e+00  1.3939650e+00 -5.7929063e-01  1.8720064e+00\n",
-      " -6.4977819e-01 -1.3023694e+00 -5.1822668e-01  2.2914219e+00\n",
-      "  2.7537260e-02 -4.0359277e-01  5.7219994e-01  6.9839627e-01\n",
-      "  2.1658461e-01 -9.5741814e-01 -3.9895657e-01  2.6702368e-01\n",
-      " -2.0635912e+00  2.2849040e-01  1.0310174e-01  1.3365020e-01\n",
-      " -1.0252728e+00  2.6028767e+00  3.7025827e-01  1.3865325e+00\n",
-      "  2.5645873e-01  7.3789263e-01  1.4613895e+00 -9.3193725e-02\n",
-      "  2.7620295e-01 -1.4395152e-01  2.6650909e-01  9.7080126e-02\n",
-      "  6.8050581e-01 -1.3285753e-01  1.7221090e+00 -2.2406425e-02\n",
-      " -1.1316657e+00 -6.4467266e-02  1.1901234e+00  2.1115472e+00\n",
-      " -1.2202401e+00  2.8805763e-01 -1.1651820e+00  6.3347095e-01\n",
-      "  5.7771564e-01  1.2484417e+00 -9.6743816e-01 -5.4663533e-01\n",
-      "  3.2517308e-01 -5.7267594e-01  1.6406398e-01  1.4235371e-03\n",
-      " -2.9260162e-01 -3.7275165e-01 -1.6768217e-02 -1.4642948e-01\n",
-      "  5.6629837e-01 -1.4218870e+00 -1.0741704e+00  1.7367461e+00\n",
-      " -2.1337321e+00  1.1149385e+00 -7.9681879e-01 -1.7512557e-01\n",
-      "  5.8409196e-01 -3.2815105e-01  1.1167775e+00 -2.2345774e-01\n",
-      "  4.3317270e-01  7.4354452e-01  5.9058350e-01  5.5738020e-01\n",
-      "  9.6501040e-01 -8.7730604e-01 -1.5605791e+00  1.4241319e+00\n",
-      " -6.8085760e-01 -1.3634386e+00  1.0609269e+00  6.9795227e-01\n",
-      "  1.9572508e-01  1.6861093e+00 -1.5159491e+00  2.2540718e-01\n",
-      " -1.6361699e+00 -1.5978093e-01 -1.2004980e+00 -1.1322467e+00\n",
-      " -1.5980659e+00 -1.4130791e+00 -1.5336664e+00  1.2062947e+00\n",
-      "  1.0572660e+00 -9.0867525e-01  1.1670120e+00  1.5804566e+00\n",
-      " -7.4720517e-02 -7.5034297e-01  1.1590869e+00 -3.5821542e-01\n",
-      " -1.0034807e+00 -9.3814695e-01  1.5121913e+00  4.0289658e-01\n",
-      "  8.8486922e-01 -9.4359529e-01 -3.7590048e-01 -9.5578760e-01\n",
-      "  1.3539263e+00 -1.4748809e+00  5.1225990e-01  3.1209248e-01\n",
-      " -1.7189908e+00 -1.2693354e+00 -3.8247293e-01 -1.4569379e-01\n",
-      "  1.6559766e-01  7.0514098e-02  4.3145290e-01  8.8837874e-01\n",
-      " -7.6314229e-01  2.4843395e-01  1.2208791e+00 -1.3281991e+00\n",
-      "  1.6402693e+00 -1.4588971e+00  3.1412259e-01  1.4592351e+00\n",
-      " -8.0172241e-01 -2.2839947e-02 -1.2336626e+00  3.0822235e-01\n",
-      "  5.4319030e-01  4.2660233e-01 -6.6679364e-01  1.7432511e+00\n",
-      " -1.4023288e+00  7.0486206e-01  1.1567070e-01 -2.4337080e-01\n",
-      " -1.4407700e+00  6.7050034e-01  1.5456622e+00 -6.9032237e-02\n",
-      "  9.9337414e-02 -1.5958053e-01  1.7071383e+00 -1.3077234e+00\n",
-      "  8.4353572e-01 -4.8520993e-02 -1.3357046e+00  4.6100703e-01\n",
-      " -3.7771207e-01 -6.9483453e-01  6.5349036e-01  8.9728075e-01\n",
-      " -9.9771488e-01  4.7894230e-01 -1.4889973e+00  5.5546772e-01\n",
-      "  8.4064907e-01  1.3427802e+00  1.2353612e+00 -2.0655282e+00\n",
-      "  1.7999482e+00 -1.7612387e+00  1.0706220e-01 -9.1716421e-01\n",
-      " -7.1177745e-01 -1.9722573e-01 -5.7332170e-01 -5.8819890e-01\n",
-      "  1.2738035e+00 -1.6058927e+00  1.4482024e+00 -8.8598013e-01\n",
-      "  1.0302631e+00  1.9095963e-02 -1.6952372e-01 -9.5697768e-02\n",
-      " -1.0050412e+00  2.1075900e-01  2.5331056e-01  8.2714063e-01\n",
-      " -2.7637985e-01 -1.8990964e-01  7.7544463e-01  7.0448214e-01\n",
-      " -2.8210452e-01 -1.0446006e+00 -1.2845460e+00 -6.2255043e-01\n",
-      "  1.3865064e-01 -1.2175939e+00  2.6376396e-01 -1.9479156e-01\n",
-      "  7.1840489e-01  1.0460567e+00  1.5565459e+00 -1.2425308e+00\n",
-      "  9.0614563e-01 -3.0846581e-01  1.8450139e+00  4.0743390e-01]\n"
+      "[-1.64423168e-01 -3.75955224e-01 -9.46125090e-01 -1.58960271e+00\n",
+      "  3.58948648e-01 -1.08429408e+00 -1.57715416e+00  2.10628793e-01\n",
+      " -1.54397511e+00  5.13530254e-01 -6.07463658e-01  6.29468083e-01\n",
+      " -4.12082136e-01  2.04661358e-02  1.08168030e+00 -2.01128173e+00\n",
+      "  2.38979533e-01 -2.68810928e-01 -5.70668459e-01 -9.87852752e-01\n",
+      " -2.71052718e-01 -1.99487877e+00  4.15319562e-01  1.49042678e+00\n",
+      "  2.88503468e-01  1.18443573e+00  5.91069281e-01 -1.32209575e+00\n",
+      "  1.21775138e+00  2.09176496e-01 -5.70016146e-01 -1.54036880e-01\n",
+      "  6.15371801e-02 -3.10096025e-01 -2.23585621e-01  5.86916327e-01\n",
+      " -2.13785589e-01 -1.29344165e+00  1.58161134e-01 -1.34159338e+00\n",
+      "  6.67421103e-01  9.89665508e-01 -2.57134736e-01  6.41969562e-01\n",
+      "  8.08358908e-01 -7.67397165e-01 -1.23623991e+00  3.29446197e-01\n",
+      "  2.10864353e+00  5.34721971e-01  9.24534321e-01 -8.76251698e-01\n",
+      "  1.44369066e+00  1.39396501e+00 -5.79290628e-01  1.87200642e+00\n",
+      " -6.49778187e-01 -1.30236936e+00 -5.18226683e-01  2.29142189e+00\n",
+      "  2.75372602e-02 -4.03592765e-01  5.72199941e-01  6.98396266e-01\n",
+      "  2.16584608e-01 -9.57418144e-01 -3.98956567e-01  2.67023683e-01\n",
+      " -2.06359124e+00  2.28490397e-01  1.03101738e-01  1.33650199e-01\n",
+      " -1.02527285e+00  2.60287666e+00  3.70258272e-01  1.38653255e+00\n",
+      "  2.56458730e-01  7.37892628e-01  1.46138954e+00 -9.31937248e-02\n",
+      "  2.76202947e-01 -1.43951520e-01  2.66509086e-01  9.70801264e-02\n",
+      "  6.80505812e-01 -1.32857531e-01  1.72210896e+00 -2.24064253e-02\n",
+      " -1.13166571e+00 -6.44672662e-02  1.19012344e+00  2.11154723e+00\n",
+      " -1.22024012e+00  2.88057625e-01 -1.16518199e+00  6.33470953e-01\n",
+      "  5.77715635e-01  1.24844170e+00 -9.67438161e-01 -5.46635330e-01\n",
+      "  3.25173080e-01 -5.72675943e-01  1.64063975e-01  1.42353715e-03\n",
+      " -2.92601615e-01 -3.72751653e-01 -1.67682171e-02 -1.46429479e-01\n",
+      "  5.66298366e-01 -1.42188704e+00 -1.07417035e+00  1.73674607e+00\n",
+      " -2.13373208e+00  1.11493850e+00 -7.96818793e-01 -1.75125569e-01\n",
+      "  5.84091961e-01 -3.28151047e-01  1.11677754e+00 -2.23457739e-01\n",
+      "  4.33172703e-01  7.43544519e-01  5.90583503e-01  5.57380199e-01\n",
+      "  9.65010405e-01 -8.77306044e-01 -1.56057906e+00  1.42413187e+00\n",
+      " -3.89039695e-01  9.49146077e-02 -1.03564668e+00 -1.66721288e-02\n",
+      " -5.76464355e-01 -1.73769668e-01  2.91396976e-01  2.17163235e-01\n",
+      "  6.86020926e-02  4.35278863e-01  4.32192326e-01 -1.42155007e-01\n",
+      "  2.07764283e-01  9.02238965e-01 -1.50740647e+00  1.31617159e-01\n",
+      " -2.71058172e-01  7.27943897e-01 -8.25754583e-01  2.70869464e-01\n",
+      "  2.85749257e-01 -3.60060006e-01  2.84966737e-01  2.47029029e-02\n",
+      " -2.07656756e-01 -3.31871986e-01  5.44059277e-01 -6.23826027e-01\n",
+      "  6.08904585e-02 -5.83441667e-02 -7.04641819e-01  4.11889762e-01\n",
+      " -2.24179745e-01  4.82959360e-01  9.83731300e-02 -1.91300720e-01\n",
+      " -6.03224874e-01 -1.22738950e-01  6.31450236e-01  3.78007710e-01\n",
+      "  4.20821570e-02 -2.55983341e-02  4.46935773e-01 -4.51829642e-01\n",
+      " -7.28860617e-01 -2.57477582e-01  8.88477117e-02 -3.93327534e-01\n",
+      "  1.64615691e-01  1.71879187e-01 -2.02732429e-01 -3.78492892e-01\n",
+      " -8.40552866e-01  2.77384400e-01  4.14816201e-01 -1.00993365e-01\n",
+      "  5.83642662e-01 -2.29145139e-01 -3.78026962e-01 -2.05418050e-01\n",
+      " -2.58020192e-01 -1.20909913e-02 -4.11722153e-01  2.91966379e-01\n",
+      " -2.35804394e-01  8.19068432e-01  1.39473483e-01  2.33834267e-01\n",
+      " -6.98147893e-01  6.78651035e-01 -1.07862580e+00  8.64491165e-01\n",
+      "  1.92413852e-01 -1.09451485e+00 -9.38420415e-01 -9.12012219e-01\n",
+      " -1.13204622e+00 -9.11976218e-01  5.61095655e-01  5.47752440e-01\n",
+      "  1.84583202e-01 -3.06555182e-01  2.84742951e-01 -1.20592809e+00\n",
+      "  2.85131902e-01 -1.00890481e+00  6.54241145e-01 -1.76896900e-01\n",
+      " -9.78769362e-02  1.36010265e+00 -1.25071096e+00 -4.23228472e-01\n",
+      " -1.52991593e+00  1.03754699e+00  6.60679460e-01 -1.20512880e-01\n",
+      " -5.28533697e-01 -4.91893291e-01 -5.12175381e-01  3.13113481e-01\n",
+      "  3.07855338e-01  6.92736149e-01  7.57494569e-01  6.16334617e-01\n",
+      "  8.95782769e-01  2.97596991e-01 -4.97719824e-01 -1.26583710e-01\n",
+      " -1.59564126e+00  1.19092786e+00 -3.88315618e-01 -7.66414881e-01\n",
+      " -9.27011907e-01  3.09041925e-02 -9.15788021e-03 -7.37280905e-01\n",
+      "  1.02433300e+00  5.72530508e-01  9.62921232e-02  4.12438780e-01\n",
+      " -2.88566381e-01 -2.42975309e-01 -2.77548075e-01  5.53914189e-01\n",
+      " -1.87131941e-01  1.07635033e+00  9.26885664e-01  5.54872453e-01]\n"
      ]
     }
    ],
@@ -149,12 +192,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('data/feature/X_train_gd_nl.npy',X_train_gd_nl)\n",
-    "np.save('data/feature/X_test_gd_nl.npy',X_test_gd_nl)"
+    "np.save('data/feature/X_train_gd_nl_new.npy',X_train_gd_nl)\n",
+    "np.save('data/feature/X_test_gd_nl_new.npy',X_test_gd_nl)"
    ]
   },
   {
